Added W3schools Photo for member

--- a/my_tennis_club/members/templates/details.html
+++ b/my_tennis_club/members/templates/details.html
@@ -9,6 +9,8 @@
     <h1>{{ mymember.firstname }} {{ mymember.lastname }}</h1>
     <p>Phone {{ mymember.phone }}</p>
     <p>Member since: {{ mymember.joined_date }}</p>
+  <h2>HTML Image</h2>
+<img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl in a jacket" width="200" height="200">
    <ul> <li onclick="window.location = '/members/'">← Back</li></ul>
   </div>
 {% endblock %}
